[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[[bin]]
name = "aoc01"
path = "src/aoc01.rs"

[[bin]]
name = "aoc02"
path = "src/aoc02.rs"

[dependencies]
#regex = { version = "1.10.2", features = [] }
fancy-regex = "0.12.0"
regex = "1.10.2"